<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:background="@color/colorOfRed"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/what_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/what_type_str"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>
        <RadioGroup
            android:id="@+id/OfferType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/team"
                android:paddingLeft="10dp"
                android:textColor="#FFF"
                android:buttonTint="#FFF"
                android:textSize="18sp"
                android:fontFamily="sans-serif"/>
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/event"
                android:paddingLeft="10dp"
                android:textColor="#FFF"
                android:buttonTint="#FFF"
                android:textSize="18sp"
                android:fontFamily="sans-serif"/>
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/offer_part"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp">
    </FrameLayout>


</android.support.constraint.ConstraintLayout>